@@ -1,3 +1,6 @@
+16. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
+	- import media type (dvd) on whereisit xml import fixed
+
 22. May 2011 Christoph Thielecke <crissi99@gmx.de>
 	- strip trailing lineend and spaces from comment at loading catalog
 	- dont replace lineend with '#' on edit comment
